implement auth status api
